@@ -13,8 +13,8 @@ public class NewScan implements Runnable {
     public static String ipList;
     public static String portList;
     public static String taskID;
-    private ServletRequest Request;
     private HttpSession Session;
+    private ServletRequest Request;
     private ServletResponse response;
 
     public NewScan() {
@@ -24,62 +24,83 @@ public class NewScan implements Runnable {
         this.Session = session;
     }
 
-    public void execute(ServletRequest request, ServletResponse response2, HttpSession session) throws Exception {
-        new Thread(new NewScan(session)).start();
+    public void execute(ServletRequest request, ServletResponse response, HttpSession session) throws Exception {
+        (new Thread(new NewScan(session))).start();
     }
 
     public void run() {
         try {
             String[] ips = ipList.split(",");
             String[] ports = portList.split(",");
-            Map<String, String> sessionObj = new HashMap<>();
-            Map<String, String> scanResult = new HashMap<>();
+            Map sessionObj = new HashMap();
+            Map scanResult = new HashMap();
             sessionObj.put("running", "true");
-            for (String ip : ips) {
-                for (String port : ports) {
+            String[] var5 = ips;
+            int var6 = ips.length;
+
+            for (int var7 = 0; var7 < var6; ++var7) {
+                String ip = var5[var7];
+                String[] var9 = ports;
+                int var10 = ports.length;
+
+                for (int var11 = 0; var11 < var10; ++var11) {
+                    String port = var9[var11];
+
                     try {
                         Socket socket = new Socket();
                         socket.connect(new InetSocketAddress(ip, Integer.parseInt(port)), 1000);
                         socket.close();
                         scanResult.put(ip + ":" + port, "open");
-                    } catch (Exception e) {
+                    } catch (Exception var14) {
                         scanResult.put(ip + ":" + port, "closed");
                     }
-                    sessionObj.put("result", buildJson(scanResult, false));
+
+                    sessionObj.put("result", this.buildJson(scanResult, false));
                     this.Session.setAttribute(taskID, sessionObj);
                 }
             }
+
             sessionObj.put("running", "false");
-        } catch (Exception e2) {
-            e2.printStackTrace();
+        } catch (Exception var15) {
+            var15.printStackTrace();
         }
+
     }
 
-    private String buildJson(Map<String, String> entity, boolean encode) throws Exception {
+    private String buildJson(Map entity, boolean encode) throws Exception {
         StringBuilder sb = new StringBuilder();
         String version = System.getProperty("java.version");
         sb.append("{");
-        for (String key : entity.keySet()) {
+
+        for (Object o : entity.keySet()) {
+            String key = (String) o;
             sb.append("\"" + key + "\":\"");
-            String value = entity.get(key);
+            String value = ((String) entity.get(key));
             if (encode) {
+                Class Base64;
+                Object Encoder;
                 if (version.compareTo("1.9") >= 0) {
-                    getClass();
-                    Class Base64 = Class.forName("java.util.Base64");
-                    Object Encoder = Base64.getMethod("getEncoder", null).invoke(Base64, null);
+                    this.getClass();
+                    Base64 = Class.forName("java.util.Base64");
+                    Encoder = Base64.getMethod("getEncoder", (Class[]) null).invoke(Base64, (Object[]) null);
                     value = (String) Encoder.getClass().getMethod("encodeToString", byte[].class).invoke(Encoder, value.getBytes(StandardCharsets.UTF_8));
                 } else {
-                    getClass();
-                    Object Encoder2 = Class.forName("sun.misc.BASE64Encoder").newInstance();
-                    value = ((String) Encoder2.getClass().getMethod("encode", byte[].class).invoke(Encoder2, value.getBytes(StandardCharsets.UTF_8))).replace("\n", "").replace("\r", "");
+                    this.getClass();
+                    Base64 = Class.forName("sun.misc.BASE64Encoder");
+                    Encoder = Base64.newInstance();
+                    value = (String) Encoder.getClass().getMethod("encode", byte[].class).invoke(Encoder, value.getBytes(StandardCharsets.UTF_8));
+                    value = value.replace("\n", "").replace("\r", "");
                 }
             }
+
             sb.append(value);
             sb.append("\",");
         }
+
         if (sb.toString().endsWith(",")) {
             sb.setLength(sb.length() - 1);
         }
+
         sb.append("}");
         return sb.toString();
     }
